<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/title_tasks" />
    <item
        android:id="@+id/nav_pomodoro"
        android:icon="@drawable/ic_timer"
        android:title="@string/title_pomodoro" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>